# AdHocParser

./: .gitignore  AdHocParser.cabal  README.md
.stack-work/install/89b54721/flag-cache/: AdHocParser-1.0
src/: AParser.hs  LocationParser.hs  Main.hs  Parser.hs
test/: LocationParserSpec.hs
