name:                AdHocParser
version:             1.0.0
synopsis:            Learning how to Parse using Functors and Applicatives
description:         Please see README.md
homepage:            http://github.com/githubuser/cis194#readme
license:             BSD3 
license-file:        LICENSE
author:              Eliecer Hernandez
maintainer:          ehernandez@stackbuilders.com
copyright:           2016 StackBuilders
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10 

library
  ghc-options:
     -Wall
  hs-source-dirs:      src 
  exposed-modules:     LocationParser
                       AParser
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                       ,mtl
  default-language:    Haskell2010

test-suite specs
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                      ,AdHocParser
                      ,hspec
  default-language:    Haskell2010

source-repository      head
  type:                git
  location:            https://github.com/EliuX/AdHocParser